assets/octadground.base.css
.og-wrap {
  box-sizing: content-box;
  position: relative;
  display: block;
}

og-helper {
  position: absolute;
  width: 12.5%;
  padding-bottom: 12.5%;
  display: table; /** hack: round to full pixel size in chrome */
  bottom: 0;
}

og-container {
  position: absolute;
  width: 800%;
  height: 800%;
  display: block;
  bottom: 0;
}

og-board {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding-bottom: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 0;
  background-size: cover;
  cursor: pointer;
}

og-board square {
  position: absolute;
  top: 0;
  left: 0;
  width: 25%;
  height: 25%;
  pointer-events: none;
}

og-board square.move-dest {
  pointer-events: auto;
}

og-board square.last-move {
  will-change: transform;
}

.og-wrap piece {
  position: absolute;
  top: 0;
  left: 0;
  width: 25%;
  height: 25%;
  background-size: cover;
  z-index: 2;
  will-change: transform;
  pointer-events: none;
}

og-board piece.dragging {
  cursor: move;
  z-index: 10;
}

piece.anim {
  z-index: 8;
}

piece.fading {
  z-index: 1;
  opacity: 0.5;
}

.og-wrap piece.ghost {
  opacity: 0.3;
}

.og-wrap piece svg {
  overflow: hidden;
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  z-index: 2;
  opacity: 0.6;
}

.og-wrap piece svg image {
  opacity: 0.5;
}

.og-wrap .og-shapes, .og-wrap .og-custom-svgs {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

.og-wrap .og-shapes {
  opacity: 0.6;
  z-index: 2;
}

.og-wrap .og-custom-svgs {
  /* over piece.anim = 8, but under piece.dragging = 10 */
  z-index: 9;
}

.og-wrap coords {
  position: absolute;
  display: flex;
  pointer-events: none;
  opacity: 0.8;
  font-family: sans-serif;
  font-size: 9px;
}

.og-wrap coords.ranks {
  left: 4px;
  top: -20px;
  flex-flow: column-reverse;
  height: 100%;
  width: 12px;
}

.og-wrap coords.ranks.black {
  flex-flow: column;
}

.og-wrap coords.files {
  bottom: -4px;
  left: 24px;
  flex-flow: row;
  width: 100%;
  height: 16px;
  text-transform: uppercase;
  text-align: center;
}

.og-wrap coords.files.black {
  flex-flow: row-reverse;
}

.og-wrap coords coord {
  flex: 1 1 auto;
}

.og-wrap coords.ranks coord {
  transform: translateY(39%);
}

